blogilista part 5 tests done

--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -8,7 +8,8 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
-    "fix": "eslint --fix ."
+    "fix": "eslint --fix .",
+    "start:test": "NODE_ENV=test node index.js"
   },
   "author": "Markus Becks",
   "license": "ISC",
