--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -9,7 +9,7 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
     "fix": "eslint --fix .",
-    "start:test": "NODE_ENV=test node index.js"
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "author": "Markus Becks",
   "license": "ISC",
