--- a/osa7/blogilista-laajennus/bloglist-frontend/package.json
+++ b/osa7/blogilista-laajennus/bloglist-frontend/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.29.7",
+    "@tanstack/react-query-devtools": "^4.29.7",
     "axios": "^1.2.3",
     "eslint-plugin-cypress": "^2.13.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
